# bitpack_serializer

./: .drom  .gitignore  CHANGES.md  LICENSE.md  Makefile  README.md  drom.toml  dune-project
.github/workflows/: workflow.yml
doc/: index.html
doc/binary_encoding/: index.html
doc/binary_encoding/BinaryEncoding/: index.html
doc/binary_encoding/BinaryEncoding/Buffer/: index.html
doc/binary_encoding/BinaryEncoding/Lens/: index.html
doc/binary_encoding/BinaryEncoding__Utils/: index.html
doc/binary_encoding/Binary_encoding/: index.html
doc/binary_encoding/Binary_encoding/Buffer/: index.html
doc/binary_encoding/Binary_encoding/Lens/: index.html
doc/binary_encoding/Binary_encoding/Version/: index.html
doc/binary_encoding/Binary_encoding__/: index.html
doc/binary_encoding/Binary_encoding__Buffer/: index.html
doc/binary_encoding/Binary_encoding__Lens/: index.html
doc/binary_encoding/Binary_encoding__Utils/: index.html
doc/binary_encoding/Binary_encoding__Version/: index.html
doc/doc/binary_encoding/: index.html
docs/: index.html
docs/doc/: index.html
docs/sphinx/: index.html
opam/: binary_encoding.opam  bitpack_serializer.opam
sphinx/: about.rst  conf.py  index.rst  install.rst  license.rst
src/: binaryEncoding.mli  bitpack_serializer.ml  bitpack_serializer.mli  buffer.ml  buffer.mli  dune  index.mld  lens.ml  lens.mli  utils.ml  utils.mli  version.mlt
src/binary_encoding/: dune  index.mld  lens.ml  main.ml  package.toml  utils.ml
test/: dune  test.ml
test/expect-tests/: test.ml
test/inline-tests/: dune
test/output-tests/: dune
(+5 files in other folders)
