
(library
  (name binaryEncoding)
  (public_name binary_encoding)
  (wrapped true)
  (libraries zarith )
  (modules_without_implementation binaryEncoding)
)


(rule
    (targets version.ml)
    (deps (:script version.mlt))
    (action (with-stdout-to %{targets} (run %{ocaml} unix.cma %{script}))))

(documentation
  (package binary_encoding))


