
(library
  (name bitpack_serializer)
  (public_name bitpack_serializer)
  (wrapped true)
  (libraries zarith)
)


(rule
    (targets version.ml)
    (deps (:script version.mlt))
    (action (with-stdout-to %{targets} (run %{ocaml} unix.cma %{script}))))

(documentation
  (package bitpack_serializer))


